[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[installer]
no-binary = [ ":none:" ]

[tool.poetry]
name = "conflog"
version = "1.5.2-pre.0"
description = "Python logging setup via environment variables and configuration files"
license = "Apache-2.0"
authors = [ "Cliffano Subagio <cliffano@gmail.com>" ]
readme = "README.md"
homepage = "https://github.com/cliffano/pyconflog"
repository = "https://github.com/cliffano/pyconflog"
documentation = "https://github.com/cliffano/pyconflog"
keywords = [
  "log",
  "logger",
  "logging",
  "config",
  "configuration",
  "environment",
  "envvar"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[[tool.poetry.packages]]
include = "conflog"

[tool.poetry.scripts]
conflog = "conflog:cli"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0.1"
toml = "^0.10.2"

[tool.poetry.group.test.dependencies]
coverage = "7.2.4"
pylint = "3.0.1"
pytest = "7.3.1"
wily = "1.24.0"

[tool.poetry.group.doc.dependencies]
pylint-report = "2.4.0"
pytest-html = "3.2.0"
Sphinx = "6.2.1"
