[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[installer]
no-binary = [ ":none:" ]

[tool.poetry]
name = "conflog"
version = "1.5.2-pre.0"
description = "Python logging setup via environment variables and configuration files"
license = "Apache-2.0"
authors = [ "Cliffano Subagio <cliffano@gmail.com>" ]
readme = "README.md"
homepage = "https://github.com/cliffano/pyconflog"
repository = "https://github.com/cliffano/pyconflog"
documentation = "https://github.com/cliffano/pyconflog"
keywords = [
  "log",
  "logger",
  "logging",
  "config",
  "configuration",
  "environment",
  "envvar"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[[tool.poetry.packages]]
include = "conflog"

[tool.poetry.scripts]
conflog = "conflog:cli"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.2"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
twine = "^5.1.1"
wheel = "^0.44.0"

[tool.poetry.group.test.dependencies]
coverage = "^7.6.4"
numpy = "1.26.4"
pylint = "^3.3.1"
pytest = "^8.3.3"
wily = "^1.25.0"

[tool.poetry.group.doc.dependencies]
pylint-report = "^2.4.0"
pytest-html = "^4.1.1"
Sphinx = "^8.1.3"
